@@ -15,7 +15,13 @@ ENABLE_TESTING()
 SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 # Set version
-SET(PROJECT_VERSION 1.7.2.99)
+# CPack version numbers for release tarball name.
+set(CPACK_PACKAGE_VERSION_MAJOR 1)
+set(CPACK_PACKAGE_VERSION_MINOR 7)
+set(CPACK_PACKAGE_VERSION_PATCH 3)
+
+SET(PROJECT_VERSION ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})
+MESSAGE(STATUS "Project Version:${PROJECT_VERSION}")
 
 IF(WIN32)
   SET(LIBDIR_KW "/LIBPATH:")
@@ -167,18 +173,13 @@ INSTALL(FILES ${${PROJECT_NAME}_BINARY_DIR}/${PROJECT_NAME}.pc
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE
 )
 
-# CPack version numbers for release tarball name.
-set(CPACK_PACKAGE_VERSION_MAJOR 1)
-set(CPACK_PACKAGE_VERSION_MINOR 7)
-set(CPACK_PACKAGE_VERSION_PATCH 1)
-
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Matrix Abstract Layer")
 set(CPACK_PACKAGE_VENDOR "JRL CNRS/AIST")
 set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/README)
 set(CPACK_GENERATOR TGZ)
 set(
 CPACK_SOURCE_PACKAGE_FILE_NAME
-"maljrl-${PROJECT_VERSION}"
+"matrixabstractlayer-${PROJECT_VERSION}"
 CACHE INTERNAL "tarball basename"
 )
 set(CPACK_SOURCE_GENERATOR TGZ)
@@ -189,6 +190,7 @@ set(CPACK_SOURCE_GENERATOR TGZ)
 set(CPACK_SOURCE_IGNORE_FILES
 "~$"
 "^${PROJECT_SOURCE_DIR}/build/"
+"^${PROJECT_SOURCE_DIR}/.git/"
 )
 #message("CPACK_SOURCE_IGNORE_FILES = ${CPACK_SOURCE_IGNORE_FILES}")
 include(CPack)
